--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      ul, li {
+        list-style: none;
+        margin: 0;
+        padding: 0
+      }
+    </style>
   </head>
   <body>
     <noscript>
